Fixed login form falling offscreen.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -110,7 +110,7 @@ body
 .login
 {
 	position: absolute;
-	top:47px;
+	top:37px;
 	right: -150px;
 }
 
